--- a/jck/jtrunner/config/default/jcktest.properties
+++ b/jck/jtrunner/config/default/jcktest.properties
@@ -7,13 +7,13 @@
 # The tests default to using 'default' as the config name.  If another name is used it must be
 # supplied to the test at run time - see openjdk.test.jck/docs/README.md for more details.
 
-testhost1name=www.eclipse.org
-testhost1ip=198.41.30.198
-testhost2name=hg.openjdk.java.net
-testhost2ip=137.254.56.63
-httpurl=http://www.neverssl.com/index.html
-ftpurl=ftp\://jckftp\:CqwbpqMpe4Q68kDRXj4mqxM7W@jckservices.adoptium.net/filename.txt
-krb5ClientPassword=user1
-krb5ClientUsername=user1
-krb5ServerPassword=user2
-krb5ServerUsername=user2
+testhost1name=openjdk-webtest.soft.fujitsu.com
+testhost1ip=10.130.111.143
+testhost2name=gengen.soft.fujitsu.com
+testhost2ip=10.129.184.215
+httpurl=http\://openjdk-webtest.soft.fujitsu.com/files/jcktest.html
+ftpurl=ftp\://openjdk-webtest.soft.fujitsu.com/pub/jcktest.txt
+krb5ClientPassword=userpass01
+krb5ClientUsername=user01
+krb5ServerPassword=adminadmin
+krb5ServerUsername=root/admin
