Update krb5.conf for local run

--- a/jck/jtrunner/config/default/krb5.conf
+++ b/jck/jtrunner/config/default/krb5.conf
@@ -13,13 +13,13 @@
 #----------------------------------------------------------------------------------
 
 [libdefaults]
-	default_realm = ADOPTIUM_NET
+#	default_realm = ADOPTIUM_NET
 
 [realms]
-	ADOPTIUM_NET = {
-		kdc = jckservices.adoptium.net
-		admin_server = jckservices.adoptium.net
-	}
+#	ADOPTIUM_NET = {
+#		kdc = jckservices.adoptium.net
+#		admin_server = jckservices.adoptium.net
+#	}
 
 [domain_realm]
-	adoptium.net = ADOPTIUM_NET
+#	adoptium.net = ADOPTIUM_NET
