--- a/external/quarkus/test.properties
+++ b/external/quarkus/test.properties
@@ -4,4 +4,4 @@ test_results="testResults"
 tag_version="2.7.5.Final"
 environment_variable="MODE=java"
 ubuntu_packages="git wget"
-mvnw_proxy="mvnw_proxy:quarkus/.mvn/jvm.config"
+proxy_data="mvnw_proxy:quarkus/.mvn/jvm.config"
