Add proxy settings for extended

--- a/external/camel/test.properties
+++ b/external/camel/test.properties
@@ -4,3 +4,4 @@
  tag_version="2.7.0"
  environment_variable="MODE=java"
  ubuntu_packages="git"
+ proxy_data="mvnw_proxy:camel-quarkus/.mvn/jvm.config"
