--- a/external/netty/test.properties
+++ b/external/netty/test.properties
@@ -3,4 +3,4 @@ test_commands="mvn clean package"
 test_results="testResults"
 tag_version="netty-4.1.75.Final"
 ubuntu_packages="git autoconf automake libtool make wget tar gcc-multilib libaio-dev"
-
+proxy_data="mvnw_proxy:netty/.mvn/jvm.config"
