--- a/external/wildfly/test.properties
+++ b/external/wildfly/test.properties
@@ -3,3 +3,4 @@ test_results=""
 tag_version="26.0.1.Final"
 ubuntu_packages="git wget tar"
 maven_version="3.8.5"
+proxy_data="mvnw_proxy:wildfly/.mvn/jvm.config"
