Fix gradlew proxy

--- a/external/kafka/test.properties
+++ b/external/kafka/test.properties
@@ -1,4 +1,4 @@
 github_url="https://github.com/apache/kafka.git"
 tag_version="3.1.0"
 ubuntu_packages="git wget unzip"
-proxy_data="gradlew_proxy:kafka/gradle/wrapper/gradle-wrapper.properties"
+proxy_data="gradlew_proxy:kafka/gradle.properties"
