--- a/external/openliberty-mp-tck/test.properties
+++ b/external/openliberty-mp-tck/test.properties
@@ -2,4 +2,4 @@ github_url="https://github.com/OpenLiberty/open-liberty.git"
 test_results="testResults"
 tag_version="gm-23.0.0.5"
 ubuntu_packages="ant-optional maven git wget tar"
-proxy_data="gradlew_proxy:open-liberty/dev/.gradle-wrapper/gradle-wrapper.properties"
+proxy_data="gradlew_proxy:open-liberty/dev/gradle.properties"
