--- a/external/quarkus_openshift/test.properties
+++ b/external/quarkus_openshift/test.properties
@@ -3,3 +3,4 @@ test_results="testResults"
 tag_version="2.7.2.Final"
 environment_variable="MODE=java"
 ubuntu_packages="git wget"
+proxy_data="mvnw_proxy:quarkus-openshift-test-suite/.mvn/jvm.config"
